# vetfkernel

./: CMakeLists.txt  Makefile  README.md  conv2d.cc  libvetfkernel.c  libvetfkernel.cc  mk_veorun_static
cmake/: revision.cmake
doc/: how_to_add_kernel_ja.txt
fake/: CMakeLists.txt  fake_syscall_gettid.c
intrinsic/: libvetfkernel.h  libvetfkernel_BiasAdd.c  libvetfkernel_BiasAdd.s  test.cpp
intrinsic/test/: CMakeLists.txt  test.cpp
misc/: binop.py
src/: CMakeLists.txt  argmax.cc  asl.cc  asl.h  binary_ops.cc  conv2d.cc  conv2d_backprop_filter.cc  conv2d_backprop_input.cc  cwise_ops_gradients.cc  dense_update_functor.cc  gather_functor.cc  kernel.h  libvetfkernel.cc  log.h  maxpooling.cc  maxpooling_backprop.cc  ops.cc  reduction_ops.cc  revision.h.in  segment_reduction_ops.cc  sparse_xent_ops.cc  timer.h  training_ops.cc  types.h  ve_ops.cc  ve_ops_common.h
src/intrinsic/: CMakeLists.txt  libvetfkernel.h  libvetfkernel_Add.c  libvetfkernel_ApplyAdam.c  libvetfkernel_BiasAdd.c  libvetfkernel_BiasAddGrad.c  libvetfkernel_Div.c  libvetfkernel_Mul.c  libvetfkernel_Neg.c  libvetfkernel_Rsqrt.c  libvetfkernel_Sqrt.c  libvetfkernel_Square.c  libvetfkernel_Sub.c  libvetfkernel_Transpose.c
test/: CMakeLists.txt  test01.cc
